More UI updates

--- a/src/htmlContent/main-view.html
+++ b/src/htmlContent/main-view.html
@@ -53,11 +53,14 @@
             <div id="project-files-container">
                 <!-- This will contain a dynamically generated <ul> hierarchy at runtime -->
             </div>
-            <div id="project-size-info">
+            <div id="project-size-info" class="hidden">
                 <div class="space-available">
                     <div class="space-used-bar"></div>
                 </div>
-                <p class="space-used-summary"><strong class="space-used">1.2</strong> of <strong>3 MB</strong> used</p>
+                <p class="space-used-summary">
+                    <strong class="space-used"></strong> of
+                    <strong class="max-project-size"></strong> used
+                </p>
             </div>
         </div>
 
